test/asm/macro-arg-illegal-escape.asm
MACRO mac
	DEF s EQUS "\#"
	println "{#s:s}"
ENDM
mac \\\"\t\r\0\n\{\}\,\(\)\w\